--- a/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
+++ b/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DebugTest, SL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -70,6 +70,10 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft_VisualStudio_QualityTools_UnitTestFramework.STW.12.0.21005.1\lib\net40\Microsoft.VisualStudio.QualityTools.UnitTestFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore">
       <Private>False</Private>
     </Reference>
@@ -83,11 +87,6 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Xml">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>
-      </HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="DevExpress.Data.v13.1">
@@ -161,6 +160,8 @@
     <Compile Include="CustomerDetail\CustomerDetailObject.cs" />
     <Compile Include="CustomerDetail\CustomerEdit.cs" />
     <Compile Include="CustomerDetail\CustomerEditObject.cs" />
+    <Compile Include="CustomersList\CustomerAccountsEdit.cs" />
+    <Compile Include="CustomersList\CustomerAccountsEditObject.cs" />
     <Compile Include="CustomersList\CustomersEdit.cs" />
     <Compile Include="CustomersList\CustomersEditObject.cs" />
     <Compile Include="CustomersList\CustomersList.cs" />
@@ -178,10 +179,10 @@
     <Compile Include="Helpers\CommandEventHandler.cs" />
     <Compile Include="Helpers\SaveLoadLayoutDataEventHandler.cs" />
     <Compile Include="LayoutData.cs" />
-    <Compile Include="MovieCategoriesList\MovieCategoriesEdit.cs" />
-    <Compile Include="MovieCategoriesList\MovieCategoriesEditObject.cs" />
-    <Compile Include="MovieCategoriesList\MovieCategoriesList.cs" />
-    <Compile Include="MovieCategoriesList\MovieCategoriesListObject.cs" />
+    <Compile Include="Tests\MovieCategoriesList\MovieCategoriesEdit.cs" />
+    <Compile Include="Tests\MovieCategoriesList\MovieCategoriesEditObject.cs" />
+    <Compile Include="Tests\MovieCategoriesList\MovieCategoriesList.cs" />
+    <Compile Include="Tests\MovieCategoriesList\MovieCategoriesListObject.cs" />
     <Compile Include="MovieCategoryDetail\MovieCategoryDetail.cs" />
     <Compile Include="MovieCategoryDetail\MovieCategoryDetailObject.cs" />
     <Compile Include="MovieCategoryDetail\MovieCategoryEdit.cs" />
@@ -254,6 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
