--- a/DevExpress.VideoRent.Resources/DevExpress.VideoRent.Resources.csproj
+++ b/DevExpress.VideoRent.Resources/DevExpress.VideoRent.Resources.csproj
@@ -127,11 +127,13 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <None Include="app.config" />
     <None Include="Properties\Settings.settings">
