--- a/DevExpress.VideoRent/DevExpress.VideoRent.csproj
+++ b/DevExpress.VideoRent/DevExpress.VideoRent.csproj
@@ -124,6 +124,7 @@
     </Compile>
     <Compile Include="ReferenceData.cs" />
     <Compile Include="RentsHistory.cs" />
+    <Compile Include="Membership.cs" />
     <Compile Include="Tests\XPObjectsBaseTests.cs" Condition="'$(Configuration)' == 'DebugTest'" />
     <Compile Include="Tests\XPObjectsTests.cs" Condition="'$(Configuration)' == 'DebugTest'" />
     <Compile Include="XPObjectsBase.cs" />
@@ -131,6 +132,7 @@
     <Compile Include="XPObjectsCatalog.cs" />
     <Compile Include="XPObjectsCustomers.cs" />
     <Compile Include="XPObjectsHelpers.cs" />
+    <Compile Include="XPObjectsPlayer.cs" />
     <Compile Include="XPObjectsRent.cs" />
   </ItemGroup>
   <ItemGroup>
