--- a/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
+++ b/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
@@ -260,6 +260,12 @@
     <Compile Include="CompanyDetail\CompanyEditView.xaml.cs">
       <DependentUpon>CompanyEditView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CurrentCustomerRents\CurrentCustomerRentsEditView - Copy.xaml.cs">
+      <DependentUpon>CurrentCustomerRentsEditView - Copy.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CurrentCustomerRents\CurrentCustomerTransactionsDetailView.xaml.cs">
+      <DependentUpon>CurrentCustomerTransactionsDetailView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CurrentCustomerRents\CurrentCustomerRentsDetailView.xaml.cs">
       <DependentUpon>CurrentCustomerRentsDetailView.xaml</DependentUpon>
     </Compile>
@@ -445,6 +451,14 @@
     <Page Include="CompanyDetail\CompanyEditView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CurrentCustomerRents\CurrentCustomerRentsEditView - Copy.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="CurrentCustomerRents\CurrentCustomerTransactionsDetailView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="CurrentCustomerRents\CurrentCustomerRentsDetailView.xaml">
       <SubType>Designer</SubType>
