Added payment command to Transaction Details module Added Summary fields to UI forms

--- a/DevExpress.VideoRent/DevExpress.VideoRent.csproj
+++ b/DevExpress.VideoRent/DevExpress.VideoRent.csproj
@@ -121,6 +121,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="ReferenceData.cs" />
     <Compile Include="RentsHistory.cs" />
@@ -145,6 +146,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
