--- a/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
+++ b/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
@@ -61,7 +61,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;VIDEORENT;</DefineConstants>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
