--- a/DevExpress.VideoRent.Resources/DevExpress.VideoRent.Resources.csproj
+++ b/DevExpress.VideoRent.Resources/DevExpress.VideoRent.Resources.csproj
@@ -55,7 +55,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
