--- a/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
+++ b/DevExpress.VideoRent.Wpf/DevExpress.VideoRent.Wpf.csproj
@@ -27,7 +27,7 @@
     <DefineConstants>TRACE;DEBUG;VIDEORENT;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
