Added view model objects for customer stats

--- a/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
+++ b/DevExpress.VideoRent.ViewModel/DevExpress.VideoRent.ViewModel.csproj
@@ -175,7 +175,8 @@
     <Compile Include="CustomersList\CustomersEditObject.cs" />
     <Compile Include="CustomersList\CustomersList.cs" />
     <Compile Include="CustomersList\CustomersListObject.cs" />
-    <Compile Include="CustomersList\CustomerStats.cs" />
+    <Compile Include="CustomerStatistics\CustomerStats.cs" />
+    <Compile Include="CustomerStatistics\CustomerStatsEdit.cs" />
     <Compile Include="CustomersList\CustomersViewOptionsEdit.cs" />
     <Compile Include="CustomersList\CustomersViewOptionsEditObject.cs" />
     <Compile Include="EditData.cs" />
